<resources>
    <string name="app_name">android-course</string>
    <string name="favorite_language_message">Select your favorite Programming Language:</string>
    <string name="scala_language">Scala</string>
    <string name="java_language">Java</string>
    <string name="python_language">Python</string>
    <string name="r_language">R</string>
    <string name="button_submit">Submit</string>
    <string name="selected_languages">Selected Languages</string>
    <string name="error_message">Enter your answer please</string>
    <string name="empty_database">There is not date in database!</string>
    <string name="history">Show History</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="browse">Browse</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>

</resources>
