<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/favorite_language_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_language_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/cd_scala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/favorite_language_message"
        android:layout_marginTop="20dp"
        android:text="@string/scala_language"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cd_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cd_scala"
        android:layout_marginTop="20dp"
        android:text="@string/java_language"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cd_python"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cd_java"
        android:layout_marginTop="20dp"
        android:text="@string/python_language"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cd_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cd_python"
        android:layout_marginTop="20dp"
        android:text="@string/r_language"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cd_r"
        android:onClick="onButtonClick"
        android:layout_marginTop="20dp"
        android:text="@string/button_submit" />

</RelativeLayout>