<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityLab4">

    <RadioGroup
        android:id="@+id/mediaType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:baselineAligned="false"
        android:checkedButton="@id/audioType"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/audioType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio" />

        <RadioButton
            android:id="@+id/videoType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video" />
    </RadioGroup>

    <Button
        android:id="@+id/playButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:enabled="false"
        android:onClick="onPlay"
        android:text="@string/play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediaType" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onStop"
        android:text="@string/stop"
        app:layout_constraintStart_toEndOf="@+id/pauseButton"
        app:layout_constraintTop_toBottomOf="@+id/mediaType" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:enabled="false"
        android:onClick="onPause"
        android:text="@string/pause"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/mediaType" />

    <Button
        android:id="@+id/browseButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:onClick="onBrowse"
        android:text="@string/browse"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/mediaType"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <VideoView
        android:id="@+id/videoPlayer"
        android:layout_width="0dp"
        android:layout_height="191dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filename" />

</androidx.constraintlayout.widget.ConstraintLayout>
